--- a/slide_3_appendix.html
+++ b/slide_3_appendix.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="" xml:lang="">
   <head>
-    <title>離散選択モデル: 補足資料</title>
+    <title>離散選択モデル: 補足資料１(理論編)</title>
     <meta charset="utf-8" />
     <meta name="author" content="講師: 遠山祐太 (早稲田大学)" />
     <script src="slide_3_appendix_files/header-attrs-2.28/header-attrs.js"></script>
@@ -12,7 +12,7 @@
 class: center, middle, inverse, title-slide
 
 .title[
-# 離散選択モデル: 補足資料
+# 離散選択モデル: 補足資料１(理論編)
 ]
 .subtitle[
 ## 応用社会科学RAブートキャンプ
@@ -21,7 +21,7 @@ class: center, middle, inverse, title-slide
 ### 講師: 遠山祐太 (早稲田大学)
 ]
 .date[
-### 最終更新: 2024-08-23 11:22:35
+### 最終更新: 2024-08-23 15:37:21
 ]
 
 ---
@@ -40,6 +40,7 @@ name: logistics
 
 
 - 上級の内容に興味がある受講生向け。
+
 
 
 ---
